# fixmate-ai

./: package.json  vite.config.ts
.github/workflows/: tauri-build.yml
client/src/: App.tsx
drizzle/meta/: _journal.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/system/: backup.rs  cleanup.rs  mod.rs  optimization.rs  process.rs  registry.rs  startup.rs  system_info.rs
