[package]
name = "fixmate-ai"
version = "1.0.0"
description = "PC optimization tool with AI assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "fixmate_ai_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "fixmate-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
